Integrating WebViewData, SystemData, StudentData classes.